5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4129/executions/1585_825.log
== TEST (2019-03-22 16:44:32) 
-- CODE:
from Math import*
r = float(input('Raio:'))
area = r**2*pi

print(area)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from Math import*
ModuleNotFoundError: No module named 'Math'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 16:44:57) 
-- CODE:
from Math import*
r = float(input('Raio:'))
area = r**2*pi

print(area)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from Math import*
ModuleNotFoundError: No module named 'Math'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 16:45:12) 
-- CODE:
from Math import*
r = float(input('Raio:'))
area = r**2*pi

print(area)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from Math import*
ModuleNotFoundError: No module named 'Math'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 16:45:28) 
-- CODE:
from Math import*
r = float(input('Raio:'))
area = r**2*pi

print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from Math import*
ModuleNotFoundError: No module named 'Math'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 16:46:06) 
-- CODE:
from Math import*
raio = float(input('raio:'))
area = r**2*pi

print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from Math import*
ModuleNotFoundError: No module named 'Math'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 16:46:18) 
-- CODE:
from Math import*
raio = float(input('raio:'))
area = r**2*pi
print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from Math import*
ModuleNotFoundError: No module named 'Math'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 16:46:32) 
-- CODE:
from Math import*
raio = float(input('raio:'))

print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from Math import*
ModuleNotFoundError: No module named 'Math'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 16:46:32) 
-- CODE:
from Math import*
raio = float(input('raio:'))
print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from Math import*
ModuleNotFoundError: No module named 'Math'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 16:46:40) 
-- CODE:

raio = float(input('raio:'))
print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(r)
NameError: name 'r' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 16:46:45) 
-- CODE:

raio = float(input('raio:'))
print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(r)
NameError: name 'r' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 16:46:50) 
-- CODE:
raio = float(input('raio:'))
print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(r)
NameError: name 'r' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 16:47:30) 
-- CODE:
raio = float(input('raio:'))
print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(r)
NameError: name 'r' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 16:47:47) 
-- CODE:
raio = float(input('raio:'))
print(raio)
-- OUTPUT:
4.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 16:50:39) 
-- CODE:
from math import*
raio = float(input('raio:'))
area = raio**2*pi
print(area)
-- OUTPUT:
63.61725123519331
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 16:51:18) 
-- CODE:
from math import*
raio = float(input('raio:'))
area = raio**2*pi
print round(area, 3(area)
-- ERROR:
File "XXXX", line 4
    print round(area, 3(area)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 16:51:42) 
-- CODE:
from math import*
raio = float(input('raio:'))
area = raio**2*pi
print round(area, 3)
-- ERROR:
File "XXXX", line 4
    print round(area, 3)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 16:51:58) 
-- CODE:
from math import*
raio = float(input('raio:'))
area = raio**2*pi
print (round(area, 3)
-- ERROR:
File "XXXX", line 5
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 16:52:33) 
-- CODE:
from math import*
raio = float(input('raio:'))
area = raio**2*pi
print(area, round(area, 3))
-- OUTPUT:
63.61725123519331 63.617
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 16:52:45) 
-- CODE:
from math import*
raio = float(input('raio:'))
area = raio**2*pi
print(round(area, 3))
-- OUTPUT:
63.617
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 16:53:34) 
-- CODE:
from math import*
raio = float(input('raio:'))
area = raio**2*pi
volume = 4/3*pi*raio**3
print(round(area, 3), round(volume, 3))
-- OUTPUT:
63.617 381.704
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 16:53:46) 
-- CODE:
from math import*
raio = float(input('raio:'))
area = raio**2*pi
volume = 4/3*pi*raio**3
print(round(area, 3), round(volume, 3))
-- EXECUTION TIME:
0.151329
-- TEST CASE 1:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
63.617 381.704
-- TEST CASE 2:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
478.388 7871.076
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
